# harness-M64

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: gigachat-functions.md  tools.md
docs/architecture/: container.puml  context.puml  multi-tool-chain.puml
memory/: level_0.md  level_1.md
src/harness/: __init__.py  __main__.py  agent.py  bus.py  core.py  smoke.py  tools_cli.py
src/harness/control/: __init__.py  shell.py
src/harness/llm/: __init__.py  base.py  gigachat.py
src/harness/memory/: __init__.py  base.py  files.py
src/harness/monitor/: __init__.py  history.py  mermaid.py  metrics.py  server.py
src/harness/tools/: __init__.py  echo.py  files.py  knowledge.py  now.py  registry.py  web.py
src/harness/ui/: __init__.py  web.py
tools/: README.md
