[project]
name = "harness"
version = "0.0.1"
description = "Self-driving LLM agent runtime — single Docker container, three TCP interfaces"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
]

[project.scripts]
harness = "harness.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
